<resources>
    <string name="app_name">SSA - Sistema de Solicitação e Agendamento</string>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Solicitações</item>
        <item>Agendamento</item>
        <item>Sobre</item>
        <item>Sair</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/handbag20</item>
        <item>@drawable/magnifying57</item>
        <item>@drawable/notebook87</item>
        <item>@drawable/spaceship2</item>
    </array>

    <string name="sobre_aplicacao">
        Projeto Integrador \n\n
        Projeto da disciplina PIN V do curso de Análise e Desenvolvimento de Sistemas, turma 2014.1. \n\n
        A aplicação tem como objetivo prover uma ferramenta de comunicação entre alunos e coordenadores dos cursos da Universidade de Fortaleza,
        agilizando assim os atendimentos das coordenações.
    </string>

    <string name="bem_vindo">Bem-Vindo(a),</string>
    <string name="txt_bem_vindo">
        esse é o app de Visualização de Solicitações e Agendamentos da \nUNIFOR (Universidade de Fortaleza).
        \nPara visualizá-los, acesse o menu ao lado arrastando-o da esquerda para direita ou clicando na seta acima.
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="corporight">© 2016 SSA Mobile ALL RIGHTS RESERVED</string>

    <!-- Strings related to login -->
    <string name="label_login">Login</string>
    <string name="prompt_matricula">Informe sua Matricula</string>
    <string name="prompt_password">Informe sua Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">A matricula é inválida</string>
    <string name="error_invalid_password">O password é muito pequeno</string>
    <string name="error_incorrect_password">Esse password está incorreto</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Solicitacao detail-->
    <string name="solicitacao_detail">Detalhes da Solicitação</string>
    <string name="label_num_solicitacao">Nº da Solicitação: </string>
    <string name="label_assunto_solicitacao">Assunto: </string>
    <string name="label_solicitante">Solicitante: </string>
    <string name="label_dsc_solicitacao">Descrição: </string>
    <string name="label_resposta_solicitacao">Resposta: </string>

    <!-- Strings related to Nova Solicitacao -->
    <string name="label_nova_solicitacao">Nova Solicitacao</string>
    <string name="hint_assunto">Assunto</string>
    <string name="hint_dsc_solicitacao">Descrição da Solicitação</string>
    <string name="err_msg_assunto">Insira um assunto para a solicitação</string>
    <string name="err_msg_dsc_solicitacao">Insira uma descrição para a solicitação</string>
    <string name="btn_salvar">Salvar</string>

    <!-- Strings related to Agendamento detail-->
    <string name="agendamento_detail">Detalhes do Agendamento</string>
    <string name="label_num_agendamento">Nº do Agendamento: </string>
    <string name="label_data_inicio_agendamento">Data Início: </string>
    <string name="label_data_fim_agendamento">Data Fim: </string>
    <string name="label_titulo_agendamento">Título do Agendamento: </string>
    <string name="label_dsc_agendaento_detail">Descrição do Agendamento: </string>
    <string name="label_dados_solicitacao">Dados da Solicitação</string>
    <string name="label_solicitante_agendamento_detail">Solicitante: </string>

    <!--Strings generics-->
    <string name="label_status">Status: </string>

</resources>
