<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_login"
        android:textSize="@dimen/fab_icon_size"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/txt_matricula"
        android:layout_width="match_parent"
        android:hint="@string/prompt_matricula"
        android:inputType="number"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:hint="@string/prompt_password"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:maxLength="8" />

    <Button
        android:id="@+id/btn_loggar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in" />

</LinearLayout>
