<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_nova_solicitacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nova_solicitacao"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/label_assunto_nova_solicitacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_assunto_solicitacao"
        android:layout_below="@+id/label_nova_solicitacao"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"/>

    <EditText
        android:id="@+id/txt_assunto_nova_solicitacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_assunto_nova_solicitacao"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/label_dsc_nova_solicitacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dsc_solicitacao"
        android:layout_below="@+id/txt_assunto_nova_solicitacao"
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"/>

    <EditText
        android:id="@+id/txt_dsc_nova_solicitacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_dsc_nova_solicitacao"
        android:height="250dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"/>

    <Button
        android:id="@+id/btn_salvar_solicitacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salvar"
        android:layout_below="@+id/txt_dsc_nova_solicitacao"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"/>

</RelativeLayout>
